include(dgpsTaskLib)
ADD_LIBRARY(${DGPS_TASKLIB_NAME} SHARED 
    ${DGPS_TASKLIB_SOURCES})

add_dependencies(${DGPS_TASKLIB_NAME}
    regen-toolkit)


TARGET_LINK_LIBRARIES(${DGPS_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${DGPS_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${DGPS_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${DGPS_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${DGPS_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${DGPS_TASKLIB_HEADERS}
    DESTINATION include/orocos/dgps)

